style: fix inline code baseline alignment (#749)

--- a/src/pages/home/_index.module.scss
+++ b/src/pages/home/_index.module.scss
@@ -101,3 +101,7 @@ summary {
   margin: 1rem;
   padding: 1.2rem;
 }
+
+code {
+  vertical-align: baseline;
+}
